...
                .constrainAs(enterManuallyButton) {
                    bottom.linkTo(parent.bottom)
                    start.linkTo(parent.start)
                    end.linkTo(scanQrButton.start)
                },
            onClick = { onEnterManuallyClicked.invoke() }) {
            Text(text = "Enter manually")
        }

        Button(
            modifier = Modifier
                .padding(8.dp)
                .constrainAs(scanQrButton) {
...
